--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,6 @@ install:
 - sh: sudo apt-get -y  install vagrant
 
 build_script:
-- vagrant up --provider=virtualbox || ssh vagrant@127.0.0.1 -p 2222 -i .vagrant\machines\default\virtualbox\private_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vvv -C "pwd"
+- vagrant up
 - vagrant ssh -c "uname -a"
 test: off
