--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ platform: x64
 
 install:
 #- sh: sudo apt-get -y  install virtualbox
-#- sh: sudo apt-get -y  install vagrant
+- sh: sudo apt -y  install vagrant
 
 build_script:
 - vagrant up
