--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ platform: x64
 install:
 #- sh: sudo apt-get -y  install virtualbox
 - sh: wget https://releases.hashicorp.com/vagrant/2.1.1/vagrant_2.1.1_x86_64.deb
-- sh: sudo apt -f vagrant_2.1.1_x86_64.deb
+- sh: sudo apt install ./vagrant_2.1.1_x86_64.deb
 
 
 build_script:
