removed vagrnt up to manually debug this

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,8 @@ install:
 
 
 build_script:
-- vagrant up
-- vagrant ssh -c "uname -a"
+#- vagrant up
+#- vagrant ssh -c "uname -a"
 
 on_finish:
   - sh: export APPVEYOR_SSH_BLOCK=true
