--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,10 +11,14 @@ install:
 #- sh: sudo apt-get -y  install virtualbox
 - sh: wget https://releases.hashicorp.com/vagrant/2.1.1/vagrant_2.1.1_x86_64.deb
 - sh: sudo apt install ./vagrant_2.1.1_x86_64.deb
-- sh: wget https://netcologne.dl.sourceforge.net/project/debian32bitvbox/OVA-image/vm1%5B32bit%5D.ova
+- sh: wget -O vm1.ova https://netcologne.dl.sourceforge.net/project/debian32bitvbox/OVA-image/vm1%5B32bit%5D.ova
 
 
 build_script:
+ - VBoxManage import vm1.ova
+ - VBoxManage modifyvm --nictype 1 Am79C973
+ - VBoxManage modifyvm --cableconnected1 on
+#-  VBoxManage startvm vm1 --type headless
  - vagrant --version
 #- vagrant up
 #- vagrant ssh -c "uname -a"
