--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,11 +21,11 @@ build_script:
   - VBoxManage modifyvm vm1 --hwvirtex off
   - VBoxManage modifyvm vm1 --vtxvpid off
   - VBoxManage modifyvm vm1 --vrde on
-#-  VBoxManage startvm vm1 --type headless
- - sudo apt-get update
-  - vagrant --version
-  - vagrant up || ssh vagrant@127.0.0.1 -p 2222 -i ~/.vagrant.d/insecure_private_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vvv -C "pwd"
-  - vagrant ssh -c "uname -a"
+  -  VBoxManage startvm vm1 --type headless
+  - sudo apt-get update
+  # - vagrant --version
+  # - vagrant up || ssh vagrant@127.0.0.1 -p 2222 -i ~/.vagrant.d/insecure_private_key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -vvv -C "pwd"
+  # - vagrant ssh -c "uname -a"
 
 on_finish:
   - sh: export APPVEYOR_SSH_BLOCK=true
